syntax = "proto3";
package serverless;
option csharp_namespace = "Proto.Serverless";
import "google/protobuf/any.proto";

//this is implemented by proto serverless itself
//Proto.Serverless is the client of the remote server

message ClientRequest {
  string identity = 1;
  string kind = 2;
  google.protobuf.Any request = 3;
}

message ClientResponse {
  google.protobuf.Any response = 1;
}

service ProtoClient {
  rpc Send(ClientRequest) returns (ClientResponse) {}
}